prog/1stPartyLibs/quirrel/quirrel/testData/exec/runtime_type_check/assign_wrong_type_04.nut
local y: int = 5
y = 8
y += 4.5
println(y)

